Refractor: Small changes to swagger
